@@ -157,7 +157,7 @@ characters as part of a word.
 Specify the name of the syntax highlighting to use from among the ones
 defined in the \fInanorc\fP files.
 .TP
-.BR \-c ", " \-\-const
+.BR \-c ", " \-\-constantshow
 Constantly show the cursor position.  Note that this overrides \fB\-U\fP.
 .TP
 .BR \-d ", " \-\-rebinddelete
