@@ -90,7 +90,7 @@ closing brackets, can end sentences.  The default value is "\fB"')>]}\fP".
 .B set casesensitive
 Do case-sensitive searches by default.
 .TP
-.B set const
+.B set constantshow
 Constantly display the cursor position in the status bar.
 .TP
 .B set cut
